# dart-sast

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
dart_sast/: __init__.py  analyzer.py  main.py  reporter.py
rules/: cryptography.yaml  injection.yaml  misconfiguration.yaml  network.yaml  secrets.yaml
tests/: test_rules.py
tests/samples/: vulnerable_app.dart
