[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dart_sast"
version = "1.0.0"
description = "Static Application Security Testing (SAST) for Dart/Flutter codebases"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["security", "sast", "dart", "flutter", "static-analysis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
dart_sast = "dart_sast.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]